modules/sg.tf
resource "aws_security_group" "ssh-security-group" {
    name        = "SSH Security Group"
    description = "Enable SSH access on Port 22"
    vpc_id      = aws_vpc.myvpc.id
    ingress {
        description      = "SSH Access"
        from_port        = 22
        to_port          = 22
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
    }

ingress {
        description      = "http Access"
        from_port        = 80
        to_port          = 80
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
    }

    egress {
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        cidr_blocks      = ["0.0.0.0/0"]
    }
    tags   = {
        Name = "sg-ssh-omen"
    }
}
